--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Avia Tickets</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Avia Tickets</title>
-</head>
-
-<body>
-  <h1>Project Avia Tickets</h1>
-</body>
-
+  <body>
+    <nav class="header purple darken-1">
+      <div class="nav-wrapper">
+        <div class="container d-flex align-items-center">
+          <div class="logo d-flex align-items-center">
+            <i class="large material-icons">flight_takeoff</i>
+            <a href="#" class="brand-logo">Avia Tickets</a>
+          </div>
+          <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto ">
+            <li>
+              <div class="input-field currency-select">
+                <select>
+                  <option value="USD">$ US Dollar</option>
+                  <option value="EUR">€ Euro</option>
+                </select>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
