--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
   </head>
 
   <body>
-    <nav class="header purple darken-1">
+    <nav class="header #8e24aa purple darken-1">
       <div class="nav-wrapper">
         <div class="container d-flex align-items-center">
           <div class="logo d-flex align-items-center">
             <i class="large material-icons">flight_takeoff</i>
             <a href="#" class="brand-logo">Avia Tickets</a>
           </div>
-          <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto ">
+          <ul id="nav-mobile" class="right hide-on-med-and-down ml-auto">
             <li>
               <div class="input-field currency-select">
-                <select>
+                <select id="currency">
                   <option value="USD">$ US Dollar</option>
                   <option value="EUR">€ Euro</option>
                 </select>
@@ -37,9 +37,9 @@
         <div class="row d-flex">
           <div class="col m6 mx-auto">
             <div class="card">
-              <form>
+              <form name="locationControls">
                 <div class="card-content">
-                  <span class="card-title">Card Title</span>
+                  <span class="card-title">Card title</span>
                   <div class="input-field">
                     <input
                       type="text"
