--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Avia Tickets</title>
-  </head>
 
+    <title>Airline Tickets</title>
+  </head>
   <body>
-    <nav class="header #8e24aa purple darken-1">
+    <nav class="header purple darken-1">
       <div class="nav-wrapper">
         <div class="container d-flex align-items-center">
           <div class="logo d-flex align-items-center">
@@ -39,7 +39,7 @@
             <div class="card">
               <form name="locationControls">
                 <div class="card-content">
-                  <span class="card-title">Card title</span>
+                  <span class="card-title">Card Title</span>
                   <div class="input-field">
                     <input
                       type="text"
@@ -59,16 +59,16 @@
                   <div class="input-field">
                     <input
                       type="text"
-                      id="datepicker-depart"
                       class="datepicker"
+                      id="datepicker-depart"
                     />
                     <label for="datepicker-depart">Depart date</label>
                   </div>
                   <div class="input-field">
                     <input
                       type="text"
-                      id="datepicker-return"
                       class="datepicker"
+                      id="datepicker-return"
                     />
                     <label for="datepicker-return">Return date</label>
                   </div>
